--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ clientapp = "flowersimulation.client_app:app"
 penalty = "l2"
 num-server-rounds = 5
 min-available-clients = 2
+dataset-name = "ai4i2020_balanced.csv"
+fl-algorithm = "FedAdagrad"
+fraction = 0.8
 
 [tool.flwr.federations]
 default = "local-simulation"
