--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ clientapp = "flowersimulation.client_app:app"
 
 [tool.flwr.app.config]
 penalty = "l2"
+local-epochs = 1
 num-server-rounds = 3
 min-available-clients = 2
 fl-algorithm = "FedAvg"
