--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,9 @@ min-available-clients = 2
 fl-algorithm = "FedAvg"
 dataset-name = "ai4i2020_imbalanced.csv"
 fraction = 0.39
-failure-rate = 0
+failure-rate = 0.3
 iid = 1
-seed = 428956419
+seed = 42
 
 [tool.flwr.federations]
 default = "local-simulation"
